Lab_1/Ejercicio_3/codigo_esp/Ejercicio_3/build/log/idf_py_stderr_output_53093
Command: make -j 10 all
/Users/diegogiordano/dev/universidad/embedded_systems/rep_se_202501_Jorge_Gomez/Lab_1/Ejercicio_3/codigo_esp/Ejercicio_3/main/Ejercicio_3.c: In function 'app_main':
/Users/diegogiordano/dev/universidad/embedded_systems/rep_se_202501_Jorge_Gomez/Lab_1/Ejercicio_3/codigo_esp/Ejercicio_3/main/Ejercicio_3.c:12:10: error: 'esp_vfs_spiffs_conf_t' has no member named 'max_open_files'; did you mean 'max_files'?
   12 |         .max_open_files = 5,
      |          ^~~~~~~~~~~~~~
      |          max_files
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/Ejercicio_3.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
